<resources>
    <string name="app_name">superhero</string>
    <string name="superheroapi">SuperHero</string>
    <string name="main_activity_text">For example : Superman, Spider-man, Ant-Man, Batman ...</string>
    <string name="main_activity_title_txt">Tapez votre nom SuperHero préféré pour commencer</string>
    <string name="ma_illustration">image</string>
    <string name="search_superhero_text">Search superhero</string>
    <string name="search_icon_text">search_icon</string>
    <string name="search">Search</string>
    <string name="heroimage">HeroImage</string>
    <string name="cardTitleText">TextView</string>
    <string name="CardSubTitleText">TextView</string>
    <string name="detailimage">detailimage</string>
    <string name="batman">Batman</string>
    <string name="value1">TextView</string>
    <string name="powersets">POWERSETS</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="placeholderTxt">TextView</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="full_name">Full name</string>
    <string name="place_of_birth">Place Of Birth</string>
    <string name="alter_egos">Alter egos</string>
    <string name="first_appearance">First Appearance</string>
    <string name="aliases">Aliases</string>
    <string name="publisher">Publisher</string>
    <string name="alignment">Alignment</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="biography">BIOGRAPHY</string>
    <string name="appearance">APPEARANCE</string>
    <string name="gender">Gender</string>
    <string name="btnTxt">Who is the most powerful</string>
    <string name="placeholder"></string>
    <string name="imageText">image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="overall_score">overall score</string>
</resources>
